PROTON-835: strncmp in pn_data_lookup doesn't work in some cases