proton-c/src/codec/codec.c
@@ -1331,7 +1331,7 @@ bool pn_data_lookup(pn_data_t *data, const char *name)
     case PN_SYMBOL:
       {
         pn_bytes_t bytes = pn_data_get_bytes(data);
-        if (!strncmp(name, bytes.start, bytes.size)) {
+        if (strlen(name) == bytes.size && !strncmp(name, bytes.start, bytes.size)) {
           return pn_data_next(data);
         }
       }
